Fix site title issue on dark mode

--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,10 @@ h3 {
 
 .site-header {
   border-top-color: transparent;
+  border-bottom: 0px;
+}
+.site-footer {
+  border-top: 0px;
 }
 .footer-heading {
   display: none;
@@ -102,6 +106,10 @@ body.dark {
 
 body.dark a {
   color: white;
+}
+
+body.dark .stie-title, body.dark .site-title:visited {
+  color: #ffffff;
 }
 
 body.dark .site-nav a {
